--- a/templates/default/xvid.css
+++ b/templates/default/xvid.css
@@ -794,11 +794,12 @@ input[type=range]:focus::-ms-fill-upper {
 li.toc_item > div > h5 > time {
     padding-right: 20px;
     vertical-align: top;
+    padding-bottom: 5px;
+    display: inline-block;
 }
 .toc_title{
     display: inline-block;
     width: 82%;
-    padding-left: 1%;
     padding-bottom: 1px;
     vertical-align: top;
 }
